--- a/transceiver.cabal
+++ b/transceiver.cabal
@@ -6,13 +6,14 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Exp, Parser, Printer, Stream, Syntax
+  exposed-modules:     Data.Functor.Exp
+                     , Data.Stream
+                     , Transceiver.Parser
+                     , Transceiver.Printer
+                     , Transceiver.Syntax
   build-depends:       base >=4.10 && <4.13
                      , contravariant
                      , profunctors
-                     , recursion-schemes
-                     , free
-                     , text
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
