--- a/transceiver.cabal
+++ b/transceiver.cabal
@@ -12,8 +12,9 @@ library
                      , Transceiver.Printer
                      , Transceiver.Syntax
   build-depends:       base >=4.10 && <4.13
-                     , contravariant
-                     , profunctors
+                     , contravariant >=1.5 && <1.6
+                     , profunctors >=5.2 && <5.4
+                     , text >=1.2 && <1.3
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
