--- a/transceiver.cabal
+++ b/transceiver.cabal
@@ -11,6 +11,7 @@ library
                      , Transceiver.Parser
                      , Transceiver.Printer
                      , Transceiver.Syntax
+                     , Transceiver.Combinators
                      , Transceiver
   build-depends:       base >=4.10 && <4.13
                      , contravariant >=1.5 && <1.6
