--- a/transceiver.cabal
+++ b/transceiver.cabal
@@ -17,6 +17,7 @@ library
                      , contravariant >=1.5 && <1.6
                      , profunctors >=5.2 && <5.4
                      , text >=1.2 && <1.3
+                     , bytestring >=0.10 && <0.11
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
