Forgot to add it to cabal

--- a/transceiver.cabal
+++ b/transceiver.cabal
@@ -18,6 +18,7 @@ library
                      , Transceiver.Syntax
                      , Transceiver.Syntax.Word8
                      , Transceiver.Combinators
+                     , Transceiver.Iso
                      , Transceiver
   build-depends:       base >=4.10 && <4.13
                      , contravariant >=1.5 && <1.6
