--- a/transceiver.cabal
+++ b/transceiver.cabal
@@ -1,3 +1,4 @@
+cabal-version:       >=2.0
 name:                transceiver
 category:            Data
 license:             MIT
@@ -6,7 +7,6 @@ version:             0.1.0.0
 author:              Sam Schweigel
 maintainer:          s.schweigel@gmail.com
 build-type:          Simple
-cabal-version:       >=1.10
 homepage:            http://github.com/sjsch/transceiver/
 synopsis:            Bidirectional syntax combinators.
 
@@ -21,6 +21,7 @@ library
                      , Transceiver.Combinators
                      , Transceiver.Iso
                      , Transceiver.Operators
+                     , Transceiver.Fields
                      , Transceiver
   build-depends:       base >=4.10 && <4.13
                      , bytestring >=0.10 && <0.11
@@ -28,7 +29,7 @@ library
                      , profunctors >=5.2 && <5.4
                      , template-haskell >= 2.14.0.0
                      , text >=1.2 && <1.3
-                     , type-level-sets
+                     , named-sop ^>= 0.1.0
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
