Update to lastest named-sop

--- a/transceiver.cabal
+++ b/transceiver.cabal
@@ -1,4 +1,4 @@
-cabal-version:       >=2.0
+cabal-version:       2.0
 name:                transceiver
 category:            Data
 license:             MIT
@@ -23,13 +23,13 @@ library
                      , Transceiver.Operators
                      , Transceiver.Fields
                      , Transceiver
-  build-depends:       base >=4.10 && <4.13
-                     , bytestring >=0.10 && <0.11
-                     , contravariant >=1.5 && <1.6
-                     , profunctors >=5.2 && <5.4
-                     , template-haskell >= 2.14.0.0
-                     , text >=1.2 && <1.3
-                     , named-sop ^>= 0.1.0
+  build-depends:       base              >= 4.10 && < 4.13
+                     , bytestring       ^>= 0.10
+                     , contravariant    ^>= 1.5
+                     , profunctors       >= 5.2 && < 5.4
+                     , template-haskell ^>= 2.14
+                     , text             ^>= 1.2
+                     , named-sop        ^>= 0.1
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
